# apa_final_project

./: Makefile  README.md  app.py  evaluate_single_instance.py  evaluate_test_instances.py  optimize_n3m40D.py  project_requirements.txt  pyproject.toml  quick_test.py  run_multiple_evaluations.py  test_results.csv  test_results_summary.txt  test_runner.py
algorithms/: greedy.py  ils.py  neighborhood.py  vnd.py
attached_assets/: Pasted-Descri-c-ao-do-problema-O-Aeroporto-APA-um-dos-principais-hubs-de-transporte-a-ereo-da-regi-ao-pas-1744671692568.txt
results/: resultados_agregados.csv
tests/: test_result_expected
utils/: file_handler.py  metrics.py  visualization.py
